--- a/style.css
+++ b/style.css
@@ -70,3 +70,9 @@ table, th, td {
 th, td {
     padding: 20px;
 }
+
+input[type="submit"], button {
+    appearance: none;
+    padding: 5px 20px;
+    border-radius: 10px;
+}
