General CSS cleanup and appearance tweaking

--- a/style.css
+++ b/style.css
@@ -40,6 +40,18 @@ form {
 
 }
 
+label {
+    padding-right: 10px;
+}
+
+input {
+    appearance: none;
+}
+
+input:focus {
+    border: lightblue solid;
+}
+
 
 
 
